namespace Jobb.Utility
{
    public enum JobbReturnCode
    {
        Success = 1,
        Error = 2,
        Waiting = 11
    }
}
