namespace Jobb.Utility
{
    public enum Period
    {
        Seconds = 1,
        Minutes = 2, 
        Hours = 3,
        Days = 4,
        Weeks = 5,
        Months = 6,
        Years = 7
    }
}
